--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-torch==2.1.0
-torchvision==0.16.0
-pandas>=2.0.3
-matplotlib>=3.7.3
+torch==2.2.2
+torchvision==0.17.2
+pytorch-lightning==2.2.1
+pandas>=2.1.0
+matplotlib>=3.7.2
 PyYAML>=6.0.1
 wandb>=0.15.10
 tensorboard==2.14.0
 scikit_learn==1.3.0
-opencv_python>=4.5.*.*
 tqdm
 torchsummary
 black
 kornia==0.7.1
+pywavelets==1.4.1
+pytorch-wavelets==1.3.0
