--- a/config.yml
+++ b/config.yml
@@ -5,8 +5,8 @@ paths:
   model_weights: "results/models"
 
 data:
-  height: 128
-  width: 128
+  height: 224
+  width: 224
   min_pixel_value: 0.0
   max_pixel_value: 255.0
   num_channels: 3
@@ -19,7 +19,7 @@ pretrain:
   warmup_epochs: 1
   weight_decay: 0.000001
   extractor: 'mobilenetv3'
-  proj_nodes: [768, 768]
+  proj_nodes: [512, 512]
   use_bias: true
   imagenet_weights: true
   labelled_only: true
@@ -45,7 +45,7 @@ train:
   lr_head: 0.02
   lr_extractor: 0.0
   weight_decay: 0.000001
-  extractor: 'mobilenetv3'
+  extractor: 'resnet14'
   extractor_weights: 'B:/Downloads/epoch=9-step=6020.ckpt'
   augment_pipeline: "supervised"
 
