Ability to exclude a data augmentation

--- a/config.yml
+++ b/config.yml
@@ -27,6 +27,7 @@ pretrain:
   method: "simclr"
   augment_pipeline: "august"
   n_cutoff_layers: 0
+  exclude_idx: -1
   hparams:
     simclr:
       tau: 0.1
@@ -40,11 +41,11 @@ pretrain:
 train:
   seed: 11
   label: 'covid-us_label'
-  linear: true
+  linear: false
   epochs: 10
   batch_size: 256
-  lr_head: 0.02
-  lr_extractor: 0.02
+  lr_head: 0.002
+  lr_extractor: 0.0002
   weight_decay: 0.000001
   extractor: 'mobilenetv3'
   extractor_weights: 'B:/Downloads/epoch=9-step=6020.ckpt'
