--- a/config.yml
+++ b/config.yml
@@ -28,6 +28,7 @@ pretrain:
   augment_pipeline: "august"
   n_cutoff_layers: 0
   exclude_idx: -1
+  square_roi: 0
   hparams:
     simclr:
       tau: 0.1
