--- a/config.yml
+++ b/config.yml
@@ -51,3 +51,4 @@ train:
   extractor: 'mobilenetv3'
   extractor_weights: 'B:/Downloads/epoch=9-step=6020.ckpt'
   augment_pipeline: "supervised"
+  n_splits_label_eff: 20
