--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 torch==2.2.1
 torchvision==0.17.1
 pytorch-lightning==2.2.1
+torchmetrics[detection]==1.3.1
 pandas>=2.1.0
 matplotlib>=3.7.2
 PyYAML>=6.0.1
