--- a/config.yml
+++ b/config.yml
@@ -62,3 +62,7 @@ train:
   augment_pipeline: "supervised"
   k_folds: 10
   n_splits_label_eff: 20
+  obj_det: 
+    min_ratio: 0.023
+    max_ratio: 0.17
+    aspect_ratios: [2, 3, 4, 5]
