--- a/config.yml
+++ b/config.yml
@@ -64,8 +64,8 @@ train:
   k_folds: 10
   n_splits_label_eff: 20
   obj_det: 
-    min_ratio: 0.023
-    max_ratio: 0.17
-    aspect_ratios: [2, 3, 4, 5]
+    min_ratio: 0.023 #0.023
+    max_ratio: 0.17 #0.17
+    aspect_ratios: [2.0, 3.0, 4.0, 5.0]
   augmentation:
     convert_all_to_linear: false
